fix popup message not showing properly

--- a/src/components/card/productCard/productCard.css
+++ b/src/components/card/productCard/productCard.css
@@ -1,8 +1,8 @@
 .productCard {
-  @apply grid gap-2 min-w-fit bg-white p-3 shadow-md rounded-md;
+  @apply grid gap-2 min-w-fit bg-white p-3 shadow-md rounded-md cursor-pointer;
 }
 .productImage {
-  @apply w-full;
+  @apply w-full h-36 object-contain;
   @apply rounded-md;
 }
 .cardBody {
@@ -18,5 +18,6 @@
   @apply text-base font-medium;
 }
 .addProduct {
-  @apply border-gray-800 border border-dashed grid gap-3 text-lg  place-items-center place-content-center cursor-pointer text-center w-full;
+  min-height: 250px;
+  @apply border-gray-800 border border-dashed h-full grid gap-3 text-lg  place-items-center place-content-center cursor-pointer text-center w-full;
 }
